--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-<h1>Hello, World!</h1>
+<div id="overlay">
+  <button id="playButton">▶</button>
+</div>
+<div id="content">
+  <img src="./video.gif" alt="" style="width:100%; height:100%;">
+  <audio id="myAudio" autoplay loop>
+    <source src="./audio.mp3" type="audio/mpeg">
+  </audio>
+</div>
+<style>
+  #overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    cursor: pointer;
+  }
+  
+  #playButton {
+    background: #898989;
+    color: white;
+    border: none;
+    padding: 50px 80px;
+    font-size: 72px;
+    border-radius: 25px;
+    cursor: pointer;
+  }
+  
+  #playButton:hover {
+    background: #2b2b2b;
+  }
+  
+  #content {
+    display: none;
+  }
+</style>
+<script>
+  document.getElementById("playButton").addEventListener("click", function() {
+    const overlay = document.getElementById("overlay");
+    const content = document.getElementById("content");
+    const audio = document.getElementById("myAudio");
+    
+    overlay.style.display = "none";
+    content.style.display = "block";
+    audio.play().catch(e => console.log("Ошибка:", e));
+  });
+</script>
